// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <span
    class="chakra-text css-1s7w14k"
  >
    My Text
  </span>
</div>
`;

exports[`renders correctly as numbers 1`] = `
<div>
  <span
    class="chakra-text css-1y4ssgr"
  >
    100
  </span>
</div>
`;

exports[`renders correctly as p 1`] = `
<div>
  <p
    class="chakra-text css-1s7w14k"
  >
    My Text
  </p>
</div>
`;
